force-app/main/default/objects/Lead/fields/Decision_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Decision_Timeline__c</fullName>
    <description>Tracks the estimated time frame within which the lead plans to make a decision</description>
    <label>Decision Timeline</label>
    <type>TextArea</type>
</CustomField>