force-app/main/default/objects/Lead/fields/Event_Attendees_Size__c.field-meta.xml
<CustomField>
    <fullName>Event_Attendees_Size__c</fullName>
    <description>Number of Attendees</description>
    <label>Event Attendees Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>