force-app/main/default/objects/Lead/fields/Event_Categories__c.field-meta.xml
<CustomField>
    <fullName>Event_Categories__c</fullName>
    <label>Event Categories</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Event_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Event</fullName>
            </value>
            <value>
                <fullName>Educational Event</fullName>
            </value>
            <value>
                <fullName>Entertainment Event</fullName>
            </value>
            <value>
                <fullName>Social Event</fullName>
            </value>
            <value>
                <fullName>Cultural Event</fullName>
            </value>
            <value>
                <fullName>Charity Event</fullName>
            </value>
            <value>
                <fullName>Private Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>