force-app/main/default/objects/Lead/fields/Event_Description__c.field-meta.xml
<CustomField>
    <fullName>Event_Description__c</fullName>
    <description>The lead’s description</description>
    <label>Event Description</label>
    <type>TextArea</type>
</CustomField>