force-app/main/default/objects/Lead/fields/Event_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Event_Subcategory__c</fullName>
    <label>Event Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Event_Categories__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Seminar</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Product Launch</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Business Meeting</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Lecture</fullName>
            </value>
            <value>
                <fullName>Concert</fullName>
            </value>
            <value>
                <fullName>Comedy Show</fullName>
            </value>
            <value>
                <fullName>Movie Screening</fullName>
            </value>
            <value>
                <fullName>Theater Play</fullName>
            </value>
            <value>
                <fullName>Wedding</fullName>
            </value>
            <value>
                <fullName>Birthday Party</fullName>
            </value>
            <value>
                <fullName>Anniversary Celebration</fullName>
            </value>
            <value>
                <fullName>Reunion</fullName>
            </value>
            <value>
                <fullName>Festival</fullName>
            </value>
            <value>
                <fullName>Art Exhibition</fullName>
            </value>
            <value>
                <fullName>Cultural Fair</fullName>
            </value>
            <value>
                <fullName>Heritage Event</fullName>
            </value>
            <value>
                <fullName>Fundraiser</fullName>
            </value>
            <value>
                <fullName>Charity Ball</fullName>
            </value>
            <value>
                <fullName>Auction</fullName>
            </value>
            <value>
                <fullName>Charity Walk/Run</fullName>
            </value>
            <value>
                <fullName>VIP Gathering</fullName>
            </value>
            <value>
                <fullName>Private Dinner</fullName>
            </value>
            <value>
                <fullName>Private Party</fullName>
            </value>
            <value>
                <fullName>Educational Workshop</fullName>
            </value>
            <value>
                <fullName>Charity Event</fullName>
                <isActive>false</isActive>
                <label>Charity Event</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>