force-app/main/default/objects/Lead/fields/Event_Venue_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Event_Venue_Requirements__c</fullName>
    <description>Special venue requirements (e.g., location, size)</description>
    <label>Event Venue Requirements</label>
    <type>TextArea</type>
</CustomField>