force-app/main/default/objects/Lead/fields/Preferred_Communication_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication_Method__c</fullName>
    <label>Preferred Communication Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Text Message</fullName>
            </value>
            <value>
                <fullName>Video Call</fullName>
            </value>
            <value>
                <fullName>In-Person Meeting</fullName>
            </value>
            <value>
                <fullName>Chat/Instant Messaging</fullName>
            </value>
            <value>
                <fullName>Social Media Message</fullName>
            </value>
            <value>
                <fullName>Postal Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>