force-app/main/default/objects/Lead/fields/Preferred_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Event_Date__c</fullName>
    <description>Date and time for Event</description>
    <label>Preferred Event Date</label>
    <type>DateTime</type>
</CustomField>